# WhaleFall

./: .cursorrules  .dockerignore  .editorconfig  .env.backup  .env.dev  .gitignore  .pre-commit-config.yaml  .uvignore  AGENTS.md  API_ROUTES_DOCUMENTATION.md  Bootstrap前端组件库架构指南.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATABASE_FIELDS_FIX_SUMMARY.md  DESIGN.md  Dockerfile  Dockerfile.dev  Dockerfile.nginx  Dockerfile.prod  Dockerfile.proxy  FUNCTION_DOCUMENTATION.md  LICENSE  LOGO_UPDATE_INSTRUCTIONS.md  MENU_ROUTE_OPTIMIZATION.md  Makefile  Makefile.dev  Makefile.flask  Makefile.prod  MySQL数据库大小查询语句.md  NGINX_502_FIX_SUMMARY.md  NGINX_CONFIG_SWITCHING_GUIDE.md  PERIOD_DISPLAY_CHANGES.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PROJECT_FILES_ANALYSIS.md  QUICK_DEPLOYMENT.md  README.md  SCRIPTS_CLEANUP_SUMMARY.md  SECURITY_VULNERABILITY_REPORT_V2.md  SESSION_TIMEOUT_FIX_SUMMARY.md  (+78 more)
.cursor/rules/: flask-web-development.mdc  gemini-rules.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml
.kiro/settings/: mcp.json
.kiro/steering/: project.md  (+29 more)
app/: __init__.py  config.py  config_prod.py  constants.py  errors.py  scheduler.py  settings.py  tasks.py
config/: database_filters.yaml
design/: README.md  whalefall-ui-imagegen.jsonl
docker/: README.md
docs/: ADDITIONAL_HARDCODED_ANALYSIS.md  API_ROUTES_DOCUMENTATION.md  CONFIG_USAGE_ANALYSIS.md  DOCUMENTATION_ORGANIZATION_SUMMARY.md  EMPTY_DIRS_CLEANUP.md  FUNCTION_DOCUMENTATION.md  HARDCODED_VALUES_ANALYSIS.md  PostgreSQL账户同步问题分析.md  README.md  SERVICES_DEAD_CODE_DETAILED_REPORT.md  SERVICES_DEAD_CODE_FRONTEND_CHECK_SUMMARY.md  SQL_Server账户同步卡住问题分析.md  SQL_Server账户同步性能分析报告.md  account_sync_adapters_refactoring.md  account_sync_adapters_refactoring_part2.md  axios_refactoring_analysis.md  axios_refactoring_complete.md  bootstrap_toast_migration.md  class.csv  database_filters_refactoring.md  database_size_stats_refactoring.md  databases_routes_issues.md  dead_code_analysis.md  dead_code_report.md  fix_account_sync_success_message.md  frontend_local_setup_guide.md  javascript_duplicate_code_inventory.md  javascript_refactoring_analysis.md  javascript_refactoring_libraries.md  javascript_ui_state_libraries.md  oracle_lowercase_username_fix.md  oracle_refactoring_summary.md  oracle_system_views_compatibility.md  refactor-table-styles.md  refactor_css_js.md  refactor_database_version_save.md  route_issues_analysis.md  services_dead_code_analysis.md  static_code_cleanup_analysis.md  unused_code_analysis_routes.md  (+6 more)
frontend/: components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
migrations/: __init__.py  convert_classification_colors.sql  convert_classification_colors_simple.sql  env.py  fix_global_params_timezone.sql  rollback_global_params_timezone.sql  verify_global_params_timezone_fix.sql
reports/: bandit-report_20250914_231459.json  bandit-report_20250915_000210.json  bandit-report_20250915_000620.json  bandit-report_20250915_055644.json  bandit-report_20250915_065817.json  black-report_20250914_231404.txt  isort-report_20250914_231404.txt  isort-report_20250914_231459.txt  isort-report_20250915_000210.txt  isort-report_20250915_000620.txt  isort-report_20250915_055644.txt  isort-report_20250915_065817.txt  mypy-report_20250914_231459.txt  mypy-report_20250915_000210.txt  mypy-report_20250915_000620.txt  mypy-report_20250915_055644.txt  mypy-report_20250915_065817.txt  ruff-report_20250914_231459.json  ruff-report_20250915_000210.json  ruff-report_20250915_000620.json  ruff-report_20250915_055644.json  ruff-report_20250915_065817.json
scripts/: README.md  accurate_migrate.py  add_version_fields.py  analyze_dead_code.py  audit_colors.py  audit_sqlserver_queries.py  batch_fix.py  build-image.sh  check_dependencies.py  check_missing_docs.py  check_missing_docs_smart.py  check_mysql_grant_option.py  clean_console_logs.py  cleanup_fullwidth_punct.py  cleanup_unused_css.py  clear_all_caches.py  clear_rule_cache.py  complete_migrate.py  constants_management.py  constants_standalone.py  convert_navicat_to_csv.py  crud_scenarios.example.yml  crud_smoke.py  debug_grant_option_matching.py  debug_monitor_permissions.py  debug_mysql_capacity.py  debug_mysql_grant_rule.py  debug_sqlserver_permissions.py  debug_sqlserver_simple.py  deploy.sh  download_vendor_libs.sh  export_permission_configs.py  final_data_migrate.py  fix_aggregation_constraint.py  fix_code.py  fix_final_prints.py  fix_logging_fstrings.py  fix_postgresql_schema.py  fix_print_statements.py  fix_priority.py  (+68 more)
sql/: 20251208_remove_tag_sort_description.sql  README.md  README_database_size_monitoring.md  account_sync_two_phase_full_migration.sql  add_aggregation_sync_category.sql  add_aggregation_sync_category_sqlite.sql  backfill_current_account_instance_fk.sql  convert_aggregations_to_partitioned.sql  convert_to_partitioned_tables.sql  create_instance_databases_table.sql  create_instance_size_aggregations_table.sql  create_instance_size_stats_table.sql  database_size_monitoring_migration.py  exported_permission_configs.sql  fix_aggregation_constraint.sql  fix_aggregation_constraint_simple.sql  fix_all_aggregations_partitions.sql  fix_deleted_at_column.sql  fix_instance_size_aggregations_partitions.sql  fix_instance_size_aggregations_table.sql  fix_instance_size_stats_partitioning.sql  fix_instance_size_stats_simple.sql  fix_sync_type_constraint.sql  fix_sync_type_constraint_postgresql.sql  init_database_size_monitoring.sql  init_postgresql.sql  init_postgresql_partitions_2025_07.sql  init_postgresql_partitions_2025_08.sql  init_scheduler_tasks.sql  init_tags.sql  migrate_add_missing_fields.sql  oracle_performance_optimization.sql  remove_classification_batches.sql  setup_mysql_monitor_user.sql  setup_oracle_monitor_user.sql  setup_postgresql_monitor_user.sql  setup_sqlserver_monitor_user.sql  setup_sqlserver_monitor_user_advanced.sql  setup_sqlserver_monitor_user_cross_db.sql  test_mysql_8_4_permissions.sql  (+4 more)
tests/: __init__.py  conftest.py  test_api.py  test_models.py
(+3617 files in other folders)
