[project]
name = "whalefallingv4"
version = "0.1.0"
description = "鲸落 - DBA数据库管理Web应用"
authors = [
    {name = "TaifishingV4 Team", email = "team@whalefalling.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.3",
    "sqlalchemy>=1.4.54",
    "flask-sqlalchemy>=3.0.5",
    "flask-migrate>=4.0.5",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.1",
    "flask-cors>=4.0.0",
    "flask-caching>=2.1.0",
    "flask-jwt-extended>=4.6.0",
    "redis>=5.0.7",
    "celery>=5.3.4",
    "apscheduler>=3.10.4",
    "bcrypt>=4.1.2",
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
    "cryptography>=41.0.7",
    "psutil>=5.9.6",
    "bleach>=6.1.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.9",
    "pymssql>=2.2.11",
    "oracledb>=1.4.2",
    "pyodbc>=5.0.1",
    "flask-bcrypt>=1.0.1",
    "loguru>=0.7.3",
    "structlog>=25.4.0",
    "psycopg[binary]>=3.2.10",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.13.0",
    "mypy>=1.6.1",
    "bandit>=1.7.5",
    "black>=23.9.1",
    "pre-commit>=3.5.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Black 代码格式化配置
[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 排除目录
  migrations
  | userdata
  | venv
  | \.venv
  | __pycache__
  | \.git
  | \.pytest_cache
  | node_modules
)/
'''

# Mypy 类型检查配置
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
color_output = true
error_summary = true
strict = true
strict_optional = true
ignore_missing_imports = false
follow_imports = "normal"
follow_imports_for_stubs = true
namespace_packages = true
platform = "darwin"

[[tool.mypy.overrides]]
module = [
    "flask.*",
    "sqlalchemy.*",
    "redis.*",
    "celery.*",
    "apscheduler.*",
    "bcrypt.*",
    "pytz.*",
    "cryptography.*",
    "psutil.*",
    "bleach.*",
    "pymysql.*",
    "psycopg2.*",
    "pymssql.*",
    "oracledb.*",
    "pyodbc.*",
]
ignore_missing_imports = true

# Bandit 安全扫描配置
[tool.bandit]
exclude_dirs = ["tests", "test", "migrations", "userdata", "venv", ".venv", "__pycache__"]
exclude = ["*/test_*.py", "*/tests/*.py", "*/migrations/*.py"]
skips = [
    "B101",  # assert_used - 测试代码中使用assert是正常的
    "B601",  # shell_injection_subprocess - 某些场景下需要执行shell命令
    "B603",  # subprocess_without_shell_equals_true - 某些场景下需要shell
    "B607",  # start_process_with_partial_path - 某些场景下需要部分路径
    "B105",  # hardcoded_password_string - 某些常量字符串被误识别
    "B106",  # hardcoded_password_funcarg - 测试数据中的密码
    "B110",  # try_except_pass - 某些异常处理需要pass
    "B608",  # hardcoded_sql_expressions - 已使用参数化查询，f-string中的where_clause是安全的
    "B112",  # try_except_continue - 某些循环中的异常处理
]
severity = "medium"
confidence = "medium"
format = "json"
output = "bandit-report.json"
verbose = true
show_skipped = true
aggregate = true
recursive = true

# isort 导入排序配置
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["app"]
known_third_party = [
    "flask",
    "sqlalchemy",
    "redis",
    "celery",
    "apscheduler",
    "bcrypt",
    "pytz",
    "cryptography",
    "psutil",
    "bleach",
    "pymysql",
    "psycopg2",
    "pymssql",
    "oracledb",
    "pyodbc",
]
skip_glob = [
    "migrations/*",
    "userdata/*",
    "venv/*",
    ".venv/*",
    "__pycache__/*",
    "*.pyc",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.18.1",
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
    "types-pyyaml>=6.0.12.20250822",
]
