[project]
name = "whalefalling"
version = "1.4.0"
description = "鲸落 - DBA数据库管理Web应用"
authors = [
    {name = "WhaleFall Team", email = "team@whalefalling.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "sqlalchemy>=2.0.43",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.1.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "flask-cors>=6.0.1",
    "flask-caching>=2.3.1",
    "flask-jwt-extended>=4.7.1",
    "redis>=6.4.0",
    "apscheduler>=3.11.0,<3.12",
    "bcrypt>=4.3.0",
    "python-dotenv>=1.1.1",
    "cryptography>=46.0.1",
    "psutil>=7.1.0",
    "pymysql>=1.1.2",
    "psycopg[binary]>=3.2.10",
    "pymssql>=2.3.7",
    "oracledb>=3.3.0",
    "pyodbc>=5.2.0",
    "flask-bcrypt>=1.0.1",
    "gunicorn>=23.0.0",
    "gevent>=25.9.1",
    "structlog>=25.4.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.7.0,<3",
    "tzdata>=2025.2",
    "flask-restx>=1.3.2,<2",
    "pydantic-settings>=2.2,<3",
    "flask-limiter>=4.1.1",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.5",
    "black>=23.9.1",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "ruff>=0.7.4",
    "pyright>=1.1.389",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Black 代码格式化配置
[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 排除目录
  migrations
  | userdata
  | venv
  | \.venv
  | __pycache__
  | \.git
  | node_modules
)/
'''

# Bandit 安全扫描配置
[tool.bandit]
exclude_dirs = ["migrations", "userdata", "venv", ".venv", "__pycache__"]
exclude = ["*/migrations/*.py"]
skips = [
    "B601",  # shell_injection_subprocess - 某些场景下需要执行shell命令
    "B603",  # subprocess_without_shell_equals_true - 某些场景下需要shell
    "B607",  # start_process_with_partial_path - 某些场景下需要部分路径
    "B105",  # hardcoded_password_string - 某些常量字符串被误识别
    "B106",  # hardcoded_password_funcarg - 某些场景下的密码参数
    "B110",  # try_except_pass - 某些异常处理需要pass
    "B608",  # hardcoded_sql_expressions - 已使用参数化查询，f-string中的where_clause是安全的
    "B112",  # try_except_continue - 某些循环中的异常处理
]
severity = "medium"
confidence = "medium"
format = "json"
output = "bandit-report.json"
verbose = true
show_skipped = true
aggregate = true
recursive = true

# isort 导入排序配置
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["app"]
combine_as_imports = true
known_third_party = [
    "flask",
    "sqlalchemy",
    "redis",
    "apscheduler",
    "bcrypt",
    "cryptography",
    "psutil",
    "pymysql",
    "pymssql",
    "oracledb",
    "pyodbc",
]
skip_glob = [
    "migrations/*",
    "userdata/*",
    "venv/*",
    ".venv/*",
    "__pycache__/*",
    "*.pyc",
]

# Ruff 静态分析与格式化配置
[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".github",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "examples",
    "scripts",
    "tests",
    "node_modules",
    "venv",
]
target-version = "py311"
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "UP",
    "B",
    "C4",
    "PIE",
    "T20",
    "Q",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "TRY",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "B905",
    "PLR0913",
    "PLR2004",
    "TRY003",
    "D400",
    "D415",
    "RUF001",
    "RUF002",
    "RUF003",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["SystemError"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T201", "S101", "S106"]
"**/migrations/**" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "unit: 单元测试（隔离、快速、无外部依赖）",
    "integration: 集成测试（需要数据库/Redis）",
    "slow: 执行时间 > 1s 的测试",
    "contract: API 契约测试",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "ruff>=0.7.4",
    "types-pyyaml>=6.0.12.20250822",
    "pyright>=1.1.389",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
